...
    val france = Country(
        id = "FRA",
        iso2 = "FR",
        name = "France",
        officialName = "French Republic",
        capital = "Paris",
        continent = "Europe",
        location = "Western Europe",
        flagImage = "https://flagcdn.com/w640/fr.png",
        flagEmoji = "🇫🇷"
    )

    val mockList = listOf(
...
